# apps/api/openapi.json
@@ -2746,6 +2746,11 @@
             "nullable": true,
             "type": "string",
             "maxLength": 20
+          },
+          "modeleMatricule": {
+            "nullable": true,
+            "type": "string",
+            "maxLength": 30
           }
         },
         "additionalProperties": false
@@ -2812,6 +2817,11 @@
             "nullable": true,
             "type": "string",
             "maxLength": 120
+          },
+          "ine": {
+            "nullable": true,
+            "type": "string",
+            "maxLength": 20
           },
           "version": {
             "type": "string"
@@ -3299,6 +3309,16 @@
             "type": "string",
             "maxLength": 120
           },
+          "ine": {
+            "nullable": true,
+            "type": "string",
+            "maxLength": 20
+          },
+          "matricule": {
+            "type": "string",
+            "minLength": 1,
+            "maxLength": 30
+          },
           "ignorerDoublons": {
             "type": "boolean"
           }
@@ -3328,6 +3348,12 @@
             "nullable": true,
             "type": "string"
           },
+          "modeleMatricule": {
+            "type": "string"
+          },
+          "exempleMatricule": {
+            "type": "string"
+          },
           "etablissements": {
             "type": "array",
             "items": {
@@ -3340,6 +3366,8 @@
           "nom",
           "nomAffichage",
           "siren",
+          "modeleMatricule",
+          "exempleMatricule",
           "etablissements"
         ],
         "additionalProperties": false
@@ -3484,6 +3512,14 @@
           "naissanceVisible": {
             "type": "boolean"
           },
+          "matricule": {
+            "nullable": true,
+            "type": "string"
+          },
+          "ine": {
+            "nullable": true,
+            "type": "string"
+          },
           "compteEtat": {
             "type": "string",
             "enum": [
@@ -3517,6 +3553,8 @@
           "dateNaissance",
           "lieuNaissance",
           "naissanceVisible",
+          "matricule",
+          "ine",
           "compteEtat",
           "roles",
           "version"
